--- a/Action_sample/app/src/main/res/layout/activity_main.xml
+++ b/Action_sample/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/imageView3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srcCompat="@drawable/sougen"
+        app:srcCompat="@drawable/nangoku"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
