無駄な変数・メソッドの削除
使用していない変数やメソッドを削除した

--- a/Action_sample/app/src/main/res/layout/activity_title.xml
+++ b/Action_sample/app/src/main/res/layout/activity_title.xml
@@ -3,27 +3,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".TitleActivity">
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="fitXY"
         app:srcCompat="@drawable/nangoku"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-<!--
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="180dp"
+        app:srcCompat="@drawable/surfuma"
+        android:layout_above="@+id/scoreText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="2dp" />
+
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/title"
-        android:layout_marginBottom="111dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-        -->
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="170dp"
+        app:srcCompat="@drawable/title" />
+
 
     <ImageButton
         android:id="@+id/start_btn"
@@ -35,22 +45,13 @@
         android:layout_centerHorizontal="true"
         android:background="#00000000"/>
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/surfuma"
-        android:layout_above="@+id/scoreText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="21dp" />
 
     <TextView
         android:id="@+id/scoreText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="29dp"
-        android:text="TextView"
+        android:text=""
         android:textSize="30sp"
         android:layout_above="@+id/start_btn"
         android:layout_centerHorizontal="true" />
